新增東豐段

--- a/css/bike.css
+++ b/css/bike.css
@@ -448,6 +448,10 @@ main .veiw .background {
   background-repeat: repeat-x;
 }
 
+main .veiw .background.df {
+  width: 26500px;
+}
+
 main .veiw .road {
   position: absolute;
   width: 120%;
@@ -761,6 +765,8 @@ main .veiw .bike {
   -webkit-transform: perspective(800px) translate(0px, -60px);
           transform: perspective(800px) translate(0px, -60px);
   -webkit-box-reflect: below 1px linear-gradient(transparent 90%, #0004);
+  -webkit-transition: .1s;
+  transition: .1s;
   -webkit-animation: animateBiking 1s steps(8) infinite paused;
           animation: animateBiking 1s steps(8) infinite paused;
 }
@@ -933,56 +939,56 @@ main .veiw .tree-9 {
 
 main .veiw .tree.tree-1 {
   right: -700px;
-  -webkit-transform: translateX(-6400px);
-          transform: translateX(-6400px);
+  -webkit-transform: translateX(-800px);
+          transform: translateX(-800px);
 }
 
 main .veiw .tree.tree-2 {
   right: -1400px;
-  -webkit-transform: translateX(-3200px);
-          transform: translateX(-3200px);
+  -webkit-transform: translateX(-9600px);
+          transform: translateX(-9600px);
 }
 
 main .veiw .tree.tree-3 {
   right: -2100px;
-  -webkit-transform: translateX(-4800px);
-          transform: translateX(-4800px);
+  -webkit-transform: translateX(-21600px);
+          transform: translateX(-21600px);
 }
 
 main .veiw .tree.tree-4 {
   right: -2800px;
-  -webkit-transform: translateX(-9600px);
-          transform: translateX(-9600px);
-}
-
-main .veiw .tree.tree-5 {
-  right: -3500px;
-  -webkit-transform: translateX(-32000px);
-          transform: translateX(-32000px);
-}
-
-main .veiw .tree.tree-6 {
-  right: -4200px;
-  -webkit-transform: translateX(-9600px);
-          transform: translateX(-9600px);
-}
-
-main .veiw .tree.tree-7 {
-  right: -4900px;
-  -webkit-transform: translateX(-33600px);
-          transform: translateX(-33600px);
-}
-
-main .veiw .tree.tree-8 {
-  right: -5600px;
   -webkit-transform: translateX(-6400px);
           transform: translateX(-6400px);
 }
 
+main .veiw .tree.tree-5 {
+  right: -3500px;
+  -webkit-transform: translateX(-20000px);
+          transform: translateX(-20000px);
+}
+
+main .veiw .tree.tree-6 {
+  right: -4200px;
+  -webkit-transform: translateX(-19200px);
+          transform: translateX(-19200px);
+}
+
+main .veiw .tree.tree-7 {
+  right: -4900px;
+  -webkit-transform: translateX(-22400px);
+          transform: translateX(-22400px);
+}
+
+main .veiw .tree.tree-8 {
+  right: -5600px;
+  -webkit-transform: translateX(-25600px);
+          transform: translateX(-25600px);
+}
+
 main .veiw .tree.tree-9 {
   right: -6300px;
-  -webkit-transform: translateX(-50400px);
-          transform: translateX(-50400px);
+  -webkit-transform: translateX(-57600px);
+          transform: translateX(-57600px);
 }
 
 main .veiw .grass {
@@ -1108,6 +1114,10 @@ main .veiw .brige {
   background-repeat: no-repeat;
 }
 
+main .veiw .brige.df {
+  right: -11500px;
+}
+
 main .veiw .info {
   position: absolute;
   left: 50%;
@@ -1133,7 +1143,7 @@ main .veiw .info .info-description {
 main .veiw .info .info-description .index-link {
   position: relative;
   height: 80px;
-  display: inline-block;
+  display: block;
   text-decoration: none;
   font-size: 2.3em;
   font-weight: 900;
@@ -1162,6 +1172,12 @@ main .veiw .info .info-description .index-link {
   30%, 60% {
     width: 230.18px;
   }
+}
+
+main .veiw .info .info-description .df-link {
+  position: relative;
+  bottom: -100px;
+  display: block;
 }
 
 main .veiw .info.open {
@@ -1236,6 +1252,54 @@ main .veiw .marker-5 {
   right: -8300px;
 }
 
+main .veiw .marker-d-1 {
+  right: -400px;
+}
+
+main .veiw .marker-d-2 {
+  right: -1400px;
+}
+
+main .veiw .marker-d-3 {
+  right: -3400px;
+}
+
+main .veiw .marker-d-4 {
+  right: -4000px;
+}
+
+main .veiw .marker-d-5 {
+  right: -5100px;
+}
+
+main .veiw .marker-d-6 {
+  right: -7100px;
+}
+
+main .veiw .marker-d-7 {
+  right: -7700px;
+}
+
+main .veiw .marker-d-8 {
+  right: -10100px;
+}
+
+main .veiw .marker-d-9 {
+  right: -12400px;
+}
+
+main .veiw .marker-d-10 {
+  right: -14200px;
+}
+
+main .veiw .marker-d-11 {
+  right: -18900px;
+}
+
+main .veiw .marker-d-12 {
+  right: -22800px;
+}
+
 main .veiw .building {
   position: absolute;
   z-index: -1;
@@ -1251,12 +1315,30 @@ main .veiw .building-1 {
   right: -600px;
 }
 
+main .veiw .building-1.df {
+  right: -600px;
+}
+
+main .veiw .building-2 {
+  background-image: url("/img/biking/商店-02.png");
+  right: -600px;
+}
+
+main .veiw .building-2.df {
+  right: -600px;
+}
+
 main .veiw .building-3 {
   width: 960px;
   height: 540px;
   background-image: url("/img/biking/洞穴-01.png");
   right: -4200px;
   bottom: 80px;
+}
+
+main .veiw .building-3.df {
+  background-image: url("/img/biking/商店-02.png");
+  right: -600px;
 }
 
 main .veiw .building-5 {
@@ -1305,8 +1387,56 @@ main .veiw .km-4 {
   right: -5400px;
 }
 
-main .veiw .km-6 {
+main .veiw .km-5 {
   right: -8300px;
+}
+
+main .veiw .km-d-1 {
+  right: -400px;
+}
+
+main .veiw .km-d-2 {
+  right: -1400px;
+}
+
+main .veiw .km-d-3 {
+  right: -3400px;
+}
+
+main .veiw .km-d-4 {
+  right: -4000px;
+}
+
+main .veiw .km-d-5 {
+  right: -5100px;
+}
+
+main .veiw .km-d-6 {
+  right: -7100px;
+}
+
+main .veiw .km-d-7 {
+  right: -7700px;
+}
+
+main .veiw .km-d-8 {
+  right: -10100px;
+}
+
+main .veiw .km-d-9 {
+  right: -12400px;
+}
+
+main .veiw .km-d-10 {
+  right: -14200px;
+}
+
+main .veiw .km-d-11 {
+  right: -18900px;
+}
+
+main .veiw .km-d-12 {
+  right: -22800px;
 }
 
 main .veiw.loaded {
