--- a/scss/bike.scss
+++ b/scss/bike.scss
@@ -271,6 +271,9 @@ main{
             background-image:   url("/img/biking/bg-2.png");
             background-size: contain  ;
             background-repeat: repeat-x;
+            &.df{
+                width: 26500px;
+            }
         }
         //路面
         .road {
@@ -544,10 +547,12 @@ main{
             background-image: url("/img/biking/腳踏車V5.png");
             transform: perspective(800px)  translate(0px,-60px);
             -webkit-box-reflect: below 1px linear-gradient(transparent 90%,#0004);
+            transition: .1s;
             animation: animateBiking 1s steps(8) infinite  paused;
             &.jump{
                 animation: animateJump 0.5s ease-out   ;
             }
+
         }
         @keyframes animateBiking {
             from{
@@ -762,6 +767,9 @@ main{
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
+            &.df{
+                right: -11500px;
+            }
         }
         .info{
             position: absolute;
@@ -779,10 +787,11 @@ main{
                 font-size: 1.5rem;
                 color: transparent;
                 transition: 1s;
+                
                 .index-link{
                     position: relative;
                     height: 80px;
-                    display: inline-block;
+                    display: block;
                     text-decoration: none;
                     font-size: 2.3em;
                     font-weight: 900;
@@ -799,6 +808,11 @@ main{
                             width: 230.18px;
                         }
                     }
+                }
+                .df-link{  
+                    position: relative;
+                    bottom: -100px;
+                    display: block;
                 }
             }
             &.open{
@@ -858,6 +872,43 @@ main{
         .marker-5{
             right: -8300px;
         }
+        .marker-d-1{
+            right: -400px;
+        }
+        .marker-d-2{
+            right: -1400px;
+        }
+        .marker-d-3{
+            right: -3400px;
+        }
+        .marker-d-4{
+            right: -4000px;
+        }
+        .marker-d-5{
+            right: -5100px;
+        }
+        .marker-d-6{
+            right: -7100px;
+        }
+        .marker-d-7{
+            right: -7700px;
+        }
+        .marker-d-8{
+            right: -10100px;
+        }
+        .marker-d-9{
+            right: -12400px;
+        }
+        .marker-d-10{
+            right: -14200px;
+        }
+        .marker-d-11{
+            right: -18900px;
+        }
+        .marker-d-12{
+            right: -22800px;
+        }
+
         .building{
             position: absolute;
             z-index: -1;
@@ -870,6 +921,16 @@ main{
         .building-1{
             background-image: url("/img/biking/商店-02.png");
             right: -600px;
+            &.df{
+                right: -600px;
+            }
+        }
+        .building-2{
+            background-image: url("/img/biking/商店-02.png");
+            right: -600px;
+            &.df{
+                right: -600px;
+            }
         }
         .building-3{
             width: 960px;
@@ -877,6 +938,10 @@ main{
             background-image: url("/img/biking/洞穴-01.png");
             right: -4200px;
             bottom: 80px;
+            &.df{
+                background-image: url("/img/biking/商店-02.png");
+                right: -600px;
+            }
         }
         .building-5{
             width: 720px;
@@ -885,6 +950,7 @@ main{
             right: -8500px;
             bottom: 115px;
         }
+
         .KM{
             position: absolute;
             z-index: 7;
@@ -916,8 +982,45 @@ main{
         .km-4{
             right: -5400px;
         }
-        .km-6{
+        .km-5{
             right: -8300px;
+        }
+        
+        .km-d-1{
+            right: -400px;
+        }
+        .km-d-2{
+            right: -1400px;
+        }
+        .km-d-3{
+            right: -3400px;
+        }
+        .km-d-4{
+            right: -4000px;
+        }
+        .km-d-5{
+            right: -5100px;
+        }
+        .km-d-6{
+            right: -7100px;
+        }
+        .km-d-7{
+            right: -7700px;
+        }
+        .km-d-8{
+            right: -10100px;
+        }
+        .km-d-9{
+            right: -12400px;
+        }
+        .km-d-10{
+            right: -14200px;
+        }
+        .km-d-11{
+            right: -18900px;
+        }
+        .km-d-12{
+            right: -22800px;
         }
         &.loaded{
             display: none;
