--- a/scss/store-content.scss
+++ b/scss/store-content.scss
@@ -1,4 +1,4 @@
-$title-img: '/img/標題用.png';
+$title-img: '/img/store-content/標題用.png';
 $store-img: 'https://dummyimage.com/475x520';
 $store-sub-img: 'https://dummyimage.com/220x220';
 $goods-img: 'https://dummyimage.com/300x300';
@@ -7,7 +7,6 @@ $goods-img: 'https://dummyimage.com/300x300';
 .title {
     width: 100%;
     height: 100%;
-    
     min-width: 438px;
     min-height: 95px;
     background-size: contain;
@@ -18,6 +17,7 @@ $goods-img: 'https://dummyimage.com/300x300';
     h1 {
         padding-left: 24px;
         padding-top: 32px;
+        font-size: 2rem;
     }
 
     &:after {
@@ -30,8 +30,17 @@ $goods-img: 'https://dummyimage.com/300x300';
 
 .subtitle {
     padding-left: 9%;
+    font-size: 1.5rem;
 }
 
+h2{
+    font-size: 1.5rem;
+}
+
+.news-content-p{
+    font-size: 1rem;
+    line-height: 30px;
+}
 
 // section
 .store {
@@ -104,6 +113,7 @@ $goods-img: 'https://dummyimage.com/300x300';
 
 .maps {
     background-color: #4e5643;
+    margin: 100px 0px;
 
     .container {
         padding-top: 1%;
