--- a/css/service.css
+++ b/css/service.css
@@ -106,7 +106,7 @@ body {
   width: 100%;
   height: 88.02vw;
   clip-path: ellipse(97.643vw 43.867vw at 50% 50%);
-  background-color: #86817c;
+  /* background-color: #86817c; */
 }
 
 
