服務中心修改完成

--- a/css/service.css
+++ b/css/service.css
@@ -11,6 +11,14 @@ html {
   overflow-y: scroll;
 }
 
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
 :root {
   overflow-y: auto;
   overflow-x: hidden;
@@ -37,6 +45,8 @@ body {
 
 .middle-background {
   background-image: url(/img/service/06-travel.taichung.gov.tw-SteelBridge-3.jpg);
+  clip-path: ellipse(97.643vw 43.867vw at 50% -10%);
+  background-color: #86817c;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -80,19 +90,27 @@ body {
 }
 
 #middle .content {
-  font-size: 0.78125vw;
+  font-size: 0.8vw;
   width: 38.298vw;
-  height: 15.833vw;
+  height: 15vw;
   border: #e0e0e0 1px solid;
-  padding: 1.302vw 1.5625vw 1.302vw 1.2625vw;
-  line-height: 1.502vw;
+  padding: 20px 30px;
+  line-height: 1.5vw;
   position: absolute;
   top: 12.917vw;
   left: 18.4375vw;
   background-color: rgba(227, 225, 176, 0.8);
+  border-radius: 20px;
 }
 
-
+#middle .bike{
+  width: 15vw;
+  height: 15vw;
+  position: absolute;
+  top: 20vw;
+  left: 70vw;
+  transform: rotate(45deg -90deg);
+}
 
 #bottom {
   width: 100vw;
@@ -105,8 +123,7 @@ body {
 #bottom .background {
   width: 100%;
   height: 88.02vw;
-  clip-path: ellipse(97.643vw 43.867vw at 50% 50%);
-  /* background-color: #86817c; */
+  clip-path: ellipse(97.643vw 43.867vw at 50% 10%);
 }
 
 
@@ -133,7 +150,7 @@ body {
   z-index: -1;
 }
 
-#bottom .background .cards {
+#bottom .background .card-group {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
@@ -142,18 +159,27 @@ body {
   height: 20.833vw;
   display: flex;
   justify-content: space-between;
-
 }
 
-#bottom .background .cards .card {
+#bottom .background .card-group .cards {
   width: 15.625vw;
   height: 20.833vw;
   background-color: transparent;
   border: 0.208vw solid #e0dda7;
+  border-radius: 10%;
   position: relative;
 }
+#bottom .background .card-group .cards .icon{
+  width: 50px;
+  height: 50px;
+  color: #4e5643;
+  font-size: 50px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -80%);
 
-#bottom .background .cards .card::before {
+}
+#bottom .background .card-group .cards::before {
   content: '';
   background-color: #e0dda7;
   width: 7.8125vw;
@@ -164,19 +190,19 @@ body {
   transform: translate(-50%, -50%);
 }
 
-#bottom .background .cards .card .card-title {
+#bottom .background .card-group .cards .cards-title {
   width: 100%;
   height: 4.375vw;
-  font-size: 1.198vw;
+  font-size: 1.5vw;
   text-align: center;
   line-height: 4.375vw;
-  margin-top: 5.573vw;
-  margin-bottom: 2.76vw;
+  margin-top: 5vw;
+  margin-bottom: 0.5vw;
   position: relative;
-  color: #e0dda7;
+  color: #4e5643;
 }
 
-#bottom .background .cards .card .card-title::before {
+#bottom .background .card-group .cards .cards-title::before {
   content: '';
   width: 2.083vw;
   height: 0.108vw;
@@ -186,7 +212,7 @@ body {
   background-color: #ffffff;
 }
 
-#bottom .background .cards .card .card-title::after {
+#bottom .background .card-group .cards .cards-title::after {
   content: '';
   width: 2.083vw;
   height: 0.108vw;
@@ -197,15 +223,15 @@ body {
   background-color: #ffffff;
 }
 
-#bottom .background .cards .card .card-content {
-  padding-left: 1.042vw;
-  padding-right: 1.042vw;
+#bottom .background .card-group .cards .cards-content {
+  padding: 0vw 1.5vw ;
   font-size: 0.78125vw;
   line-height: 1.302vw;
+  color: #4e5643;
 }
 
 #bottom>.title {
-  font-size: 1.875vw;
+  font-size: 1.5vw;
   padding-bottom: 0.25vw;
   width: 7.5833vw;
   border-bottom: 0.15625vw solid #ffffff;
@@ -292,4 +318,353 @@ body {
 
 .footer-mask {
   bottom: -2%;
+}
+
+
+
+/* 表單 */
+
+.pen-title{
+  position: absolute;
+  top: 60vw;
+  left: 55vw;
+}
+
+/* Pen Title */
+.pen-title {
+  text-align: center;
+  letter-spacing: 2px;
+}
+.pen-title h1 {
+  margin: 0 0 20px;
+  font-size: 48px;
+  font-weight: 300;
+}
+.pen-title span {
+  font-size: 12px;
+}
+.pen-title span .fa {
+  color: #f0f4ca;
+}
+.pen-title span a {
+  color: #f0f4ca;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+/* Scroll To Bottom */
+#codepen, #portfolio {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background: #363636;
+  width: 56px;
+  height: 56px;
+  border-radius: 100%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: 0.3s ease;
+  color: #ffffff;
+  text-align: center;
+}
+#codepen i, #portfolio i {
+  line-height: 56px;
+}
+#codepen:hover, #portfolio:hover {
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+/* CodePen */
+#portfolio {
+  bottom: 96px;
+  right: 36px;
+  background: #f0f4ca;
+  width: 44px;
+  height: 44px;
+  -webkit-animation: buttonFadeInUp 1s ease;
+  animation: buttonFadeInUp 1s ease;
+}
+#portfolio i {
+  line-height: 44px;
+}
+
+/* Container */
+.container {
+  position: relative;
+  max-width: 460px;
+  width: 100%;
+  margin: 0 auto 100px;
+}
+.container.active .card:first-child {
+  background: #f2f2f2;
+  margin: 0 15px;
+}
+.container.active .card:nth-child(2) {
+  background: #fafafa;
+  margin: 0 10px;
+}
+.container.active .card.alt {
+  top: 20px;
+  right: 0;
+  width: 100%;
+  min-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  padding: 60px 0 40px;
+  overflow: hidden;
+}
+.container.active .card.alt .toggle {
+  position: absolute;
+  top: 40px;
+  right: -70px;
+  box-shadow: none;
+  transform: scale(10);
+  transition: transform 0.3s ease;
+}
+.container.active .card.alt .toggle:before {
+  content: "";
+}
+.container.active .card.alt .title,
+.container.active .card.alt .input-container,
+.container.active .card.alt .button-container {
+  left: 0;
+  opacity: 1;
+  visibility: visible;
+  transition: 0.3s ease;
+}
+.container.active .card.alt .title {
+  transition-delay: 0.3s;
+}
+.container.active .card.alt .input-container {
+  transition-delay: 0.4s;
+}
+.container.active .card.alt .input-container:nth-child(2) {
+  transition-delay: 0.5s;
+}
+.container.active .card.alt .input-container:nth-child(3) {
+  transition-delay: 0.6s;
+}
+.container.active .card.alt .button-container {
+  transition-delay: 0.7s;
+}
+
+/* Card */
+.card {
+  position: relative;
+  background: #ffffff;
+  border-radius: 5px;
+  padding: 60px 0 40px 0;
+  box-sizing: border-box;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: 0.3s ease;
+}
+.card:first-child {
+  background: #fafafa;
+  height: 10px;
+  border-radius: 5px 5px 0 0;
+  margin: 0 10px;
+  padding: 0;
+}
+.card .title {
+  position: relative;
+  z-index: 1;
+  border-left: 5px solid #4e5643;
+  margin: 0 0 35px;
+  color: #4e5643;
+  font-size: 32px;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+.card .input-container {
+  position: relative;
+  margin: 0 60px 50px;
+}
+h5{
+  margin: 10px 0;
+}
+
+.card .input-container input {
+  outline: none;
+  z-index: 1;
+  position: relative;
+  background: none;
+  width: 100%;
+  height: 60px;
+  border: 0;
+  color: #212121;
+  font-size: 24px;
+  font-weight: 400;
+}
+.card .input-container input:focus ~ label {
+  color: #9d9d9d;
+  transform: translate(-12%, -50%) scale(0.75);
+}
+.card .input-container input:focus ~ .bar:before, .card .input-container input:focus ~ .bar:after {
+  width: 50%;
+}
+.card .input-container input:valid ~ label {
+  color: #9d9d9d;
+  transform: translate(-12%, -50%) scale(0.75);
+}
+.card .input-container label {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #757575;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 60px;
+  transition: 0.2s ease;
+}
+.card .input-container .bar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: #757575;
+  width: 100%;
+  height: 1px;
+}
+.card .input-container .bar:before, .card .input-container .bar:after {
+  content: "";
+  position: absolute;
+  background: #aea83e;
+  width: 0;
+  height: 2px;
+  transition: 0.2s ease;
+}
+.card .input-container .bar:before {
+  left: 50%;
+}
+.card .input-container .bar:after {
+  right: 50%;
+}
+.card .button-container {
+  margin: 0 60px;
+  text-align: center;
+}
+.card .button-container button {
+  outline: 0;
+  cursor: pointer;
+  position: relative;
+  display: inline-block;
+  background: 0;
+  width: 240px;
+  border: 2px solid #e3e3e3;
+  padding: 20px 0;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  overflow: hidden;
+  transition: 0.3s ease;
+}
+.card .button-container button span {
+  position: relative;
+  z-index: 1;
+  transition: 0.3s ease;
+  font-size: 20px;
+  color: #aea83e;
+}
+.card .button-container button:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: block;
+  background: #aea83e;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  margin: -15px 0 0 -15px;
+  opacity: 0;
+  transition: 0.3s ease;
+}
+.card .button-container button:hover, .card .button-container button:active, .card .button-container button:focus {
+  border-color: #aea83e;
+}
+.card .button-container button:hover span, .card .button-container button:active span, .card .button-container button:focus span {
+  color: #aea83e;
+}
+.card .button-container button:active span, .card .button-container button:focus span {
+  color: #ffffff;
+}
+.card .button-container button:active:before, .card .button-container button:focus:before {
+  opacity: 1;
+  transform: scale(10);
+}
+.card .footer {
+  margin: 40px 0 0;
+  color: #d3d3d3;
+  font-size: 24px;
+  font-weight: 300;
+  text-align: center;
+}
+.card .footer a {
+  color: inherit;
+  text-decoration: none;
+  transition: 0.3s ease;
+}
+.card .footer a:hover {
+  color: #bababa;
+}
+.card.alt {
+  position: absolute;
+  top: 40px;
+  right: -70px;
+  z-index: 10;
+  width: 140px;
+  height: 140px;
+  background: none;
+  border-radius: 100%;
+  box-shadow: none;
+  padding: 0;
+  transition: 0.3s ease;
+}
+.card.alt .toggle {
+  position: relative;
+  background: #aea83e;
+  width: 140px;
+  height: 140px;
+  border-radius: 100%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  color: #ffffff;
+  font-size: 58px;
+  line-height: 140px;
+  text-align: center;
+  cursor: pointer;
+}
+.card.alt .title,
+.card.alt .input-container,
+.card.alt .button-container {
+  left: 100px;
+  opacity: 0;
+  visibility: hidden;
+}
+.card.alt .title {
+  position: relative;
+  border-color: #ffffff;
+  color: #ffffff;
+}
+.card.alt .title .close {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 60px;
+  display: inline;
+  color: #ffffff;
+  font-size: 58px;
+  font-weight: 400;
+}
+
+/* Keyframes */
+@-webkit-keyframes buttonFadeInUp {
+  0% {
+    bottom: 30px;
+    opacity: 0;
+  }
+}
+@keyframes buttonFadeInUp {
+  0% {
+    bottom: 30px;
+    opacity: 0;
+  }
 }
