--- a/css/service.css
+++ b/css/service.css
@@ -105,11 +105,11 @@ body {
   width: 15vw;
   height: 15vw;
   position: absolute;
-  top: 20vw;
+  top: 19vw;
   right: 14vw;
   background-image: url('/img/service/LOGO-腳踏車.png');
   display: block;
-  background-size: contain;
+  background-size: cover;
   z-index: 1;
 }
 
